- PUSH34's skybox has been tweaked to look a little prettier.
- The doublejump indicator now has text on it to identify that, yes, this is for double-jump.
- The doublejump indicator now empties out when used instead of vanishing.
- A new M_DOOM logo has been provided by Smoke_Fumus and MrSetharoo.
- Menu browsing, chatting, and connecting now have their own unique sounds.


WHY WE CAN'T HAVE NICE DETAIL:
- PUSH06's lower platforms have been raised up to prevent people from camping there.
- The mushroom platform in PUSH10 has been removed.



FROM V0.4 TO V0.5:
==================
GAMEPLAY:
- Levels that are too bright now automatically give the players items that turn shots translucent, rather than additive.
- Players now have an inventory item that activates a wallhack visor, which allows them to see exactly where other players are located.
- Sudden Death Drones now have their mass halved, meaning they can be pushed about. Taking "damage" makes them forget about their target and wander about for a bit.
- The Gauntlet alt-fire now does a whole -2 recoil instead of -1.

MAPS:
- Thanks to PresidentPeople, Push32 has had the circles slowly peter out in darkness, for easier identification of where you are.
- The height of Push32 has been increased, and players will no longer be scraping against the ceiling after four minutes.
- The grey rocks on Push22 are now colored red, for easier identification of kill floors.
- Push31 has had the height of the cake lowered, less 3D floors, and the platforms brought closer to the center.
- The sudden death drones should now work on Push31 and Push22.
- Everyone now spawns at the same height on Push23. No more spawning next to lava.
- The glowing lights on Push24 have resumed their original jumppad behavior in SpaceDM5.
- The stone walls on Push27 are now different colors than the floor textures, for easier differentiation between floor and wall.
- Now no player spawns on Push16 are on an area sinkable into the floor.