@@ -1,7 +1,7 @@
 script 827 ENTER
 {
-    if (GetCVar("deathmatch") != 1) { terminate; }
     delay(15);
+    if (GetCVar("deathmatch") != 1) { terminate; }
     if (TimeExceeded > 15)
     {
         KickFromGame(PlayerNumber(), "Please wait until the current match has ended.");
@@ -10,11 +10,11 @@ script 827 ENTER
 
 script 828 OPEN
 {
+    TimeExceeded = 0;
+    delay(5);
+    TimeExceeded = 0;
+    delay(5);
     if (GetCVar("deathmatch") != 1) { terminate; }
-    TimeExceeded = 0;
-    delay(5);
-    TimeExceeded = 0;
-    delay(5);
     TimeExceeded = 0;
     PrintBold(s:"Fifteen seconds to join in.");
     while(1)
