@@ -57,6 +57,7 @@ POLISH:
 - The doublejump indicator now empties out when used instead of vanishing.
 - A new M_DOOM logo has been provided by Smoke_Fumus and MrSetharoo.
 - Menu browsing, chatting, and connecting now have their own unique sounds.
+- If lms_allowedweapons is not 0, it will automatically be set to 0.
 
 
 WHY WE CAN'T HAVE NICE DETAIL:
